--- a/.gitignore
+++ b/.gitignore
@@ -109,7 +109,7 @@ fastlane/test_output
 # After new code Injection tools there's a generated folder /iOSInjectionProject
 # https://github.com/johnno1962/injectionforxcode
 
-RickAndMortyApp/
+iOSInjectionProject/
 
 ### SwiftPM ###
 Packages
